# sunxu42

./: .editorconfig  .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.mjs  next-pwa.d.ts  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.trae/rules/: project_rules.md
backend/: .env.development  .env.production  README.md  pyproject.toml
backend/app/: main.py
deploy/nginx/: app.conf
deploy/scripts/: healthcheck.sh  install.sh  restart.sh  rollback.sh
deploy/systemd/: app-backend.service
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  main.tsx
prisma/: schema.prisma
public/: manifest.json  sw.js  workbox-4754cb34.js
public/animations/: 404.lottie  christmas-tree.lottie  developer-skills.lottie  developer.lottie  dynamic-quad-cubes.lottie  lego.lottie  person.lottie  programmers.lottie  react-icon.lottie
scripts/: build.sh  dev.ps1  dev.sh  release.sh
src/: auth.ts  i18n.ts  middleware.ts  proxy.ts
src/app/: globals.css  header-wrapper.tsx  i18n.ts  layout.tsx  manifest.ts  not-found.tsx  page.tsx
src/components/: ClientHtml.tsx  Header.tsx  index.ts
src/constants/: cacheKeys.ts  i18n.ts  lottie.ts
src/lib/: auth.config.ts  auth.ts  authMiddleware.ts  constants.ts  db.ts  prisma.ts  utils.ts
src/schemas/: auth.ts
src/services/: auth.service.ts
src/types/: api-schemas.ts  auth-schemas.ts  common.ts  index.ts  (+2 more)
(+86 files in other folders)
